remove vowels from string

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 substring.class
 diffOfASCII.class
-toggle.java
+toggle.class
 anagram.class
 anagram1.class
 reverseString.class
 compressAString.class
 printSubsequence.class
 reverseString1.class
+removeVowelFromString.class
