permuatations of string

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ printSubsequence.class
 reverseString1.class
 removeVowelFromString.class
 removePrimeFromArrayList.class
+permutationsOfAString.class
